Corrected letter spacing in footer contact box

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1389,7 +1389,7 @@ fieldset h1 {
   font-family: "Montserat", Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: 300;
-  letter-spacing: 6px;
+  letter-spacing: 4px;
   line-height: 16px;
   text-transform: uppercase;
   padding: 10px 0;
